tests/expectations/compiler/integers/i8/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'i8'
    --> compiler-test:5:15
     |
   5 |     let i = 1 i8;
     |               ^^
